# flash-loan-arb-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
contracts/: Arbitrage.sol  FlashLoan.sol  FlashLoanArbitrageBot.sol
contracts/contracts/: FlashLoan.sol
contracts/interfaces/: Arbitrage-Contract-Interface.js  Balancer-V2-Interface.js  Ethereum-Node-Interface.js  IUniswapV2Factory.sol  IUniswapV2Pair.sol  IUniswapV2Router02.sol
rust/: Cargo.toml  [[bin]].toml
rust/src/: abi.rs  alerts.rs  bridges.rs  db.rs  lib.rs  main.rs  metrics.rs  oracles.rs  services.rs  websocket.rs
rust/tests/: arb_bot.rs  test_arb_bot.rs  test_arb_bot_0.rs
scripts/: .env.example  config.js  configure.js  deploy.js  deploy_contracts.js
test/: FlashLoan.test.js  FlashLoanArbitrageBot.test.js
