[package]
name = "arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "1.0.2" # Ethers.rs for interacting with Ethereum
serde = { version = "1.0", features = ["derive"] } # Serialization of JSON 
config = "0.13" # Configuration management
log = "0.4" # Logging
dotenv = "0.15" # Environment variable management
tokio = { version = "1.0", features = ["macros"] } # Asynchronous runtime

[dev-dependencies]
mockall = "0.11" # Mocking for testing

[[bin]]
name = "arb-bot"
path = "src/main.rs" # Entry point
